# vocab-stack

./: .gitignore  app.py  archiver_mock.py  database.db  database.py  hello.py  models.py  pyproject.toml  vocabs_model.py
static/: site.css
templates/: archive_ui.html  edit.html  index.html  layout.html  new.html  rows.html  show.html  vocab_row.html  vocab_rows.html  word.html  word_new.html  word_validation.html
