[project]
name = "vocab-stack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.19",
    "sqlmodel>=0.0.22",
    "starlette>=0.41.3",
    "uvicorn>=0.32.1",
    "wordfreq>=3.1.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
